Created home.html template

--- a/website/templates/_base.html
+++ b/website/templates/_base.html
@@ -3,7 +3,7 @@
   <head>
   	<meta charset='utf-8'>
 
-  	<title>{% block title %}Kevin Harper{% endblock title %}</title>
+  	<title>{% block title %}Hello{% endblock title %} | Kevin Harper</title>
   </head>
   <body>
   	<div class="container">
