--- a/website/templates/pages/home.html
+++ b/website/templates/pages/home.html
@@ -1,9 +1,331 @@
-{% extends '_base.html' %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Welcome to my little corner of the web. I'm a systems administrator with a degree in molecular & cellular biology who enjoys writing code. I work w/ Linux & Windows server during the day and work on open source projects during the night.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-{% block title %}Home{% endblock title %}
+    <title>Kevin Harper | Home</title>
 
-{% block content %}
-<h1>Homepage</h1>
-<p>present</p>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/80d69941fb.js"></script>
+    <script>
+      function displayLast(){
+        document.getElementById('i-enjoy').style.opacity = 1;
+        document.getElementById('job-title').style.opacity = 1;
+      }
+      function fadeOut(elem1, elem2){
+        // element is currently visible
+        elemOpacity = 1;
 
-{% endblock content %}
+        function fade() {
+          if ((elemOpacity -= .1) > 0) {
+            elem1.style.opacity = elemOpacity;
+            elem2.style.opacity = elemOpacity;
+            setTimeout(fade, 200);
+          }
+        };
+        fade();
+      }
+
+      function fadeIn(elem1, elem2){
+        // element is currently not visible
+        elemOpacity = 0;
+
+        function fade() {
+          if ((elemOpacity += .1) < 1) {
+            elem1.style.opacity = elemOpacity;
+            elem2.style.opacity = elemOpacity;
+            setTimeout(fade, 100);
+          }
+        };
+        fade();
+      }
+
+      function animateSkillset() {
+        var jobTitleElem = document.getElementById('job-title');
+        var iEnjoyElem = document.getElementById('i-enjoy');
+        jobTitleElem.innerHTML = "";
+        iEnjoyElem.innerHTML = "";
+
+        var jobTitleArray = ["<small>Hello &</small><br>welcome!", "<small>I'm a</small><br>Systems Administrator.", "<small>I</small><br>love to code.", "<small>I'm passionate</small><br>about open source."]
+        var iEnjoyArray = [" ", "10+ yrs experience w/ Linux & Win<br>servers, networking, & support", "Most recently, web-based apps<br>via Python, Django, & Docker", "Regular contributor to<br>open source projects on GitHub"]
+        var i = 0;
+        jobTitleElem.innerHTML = jobTitleArray[i];
+        iEnjoyElem.innerHTML = iEnjoyArray[i];
+
+        var millsToWait = 100;
+        var action = 'nof'; // fi = fade in | nof = no fade | fo = fade out
+
+        function displayNextTitle() {
+          jobTitleElem.innerHTML = jobTitleArray[i];
+          iEnjoyElem.innerHTML = iEnjoyArray[i];
+
+          if( action == 'fi' ) {
+            action = 'nof';
+            fadeIn(jobTitleElem, iEnjoyElem);
+            setTimeout(displayNextTitle, 2100);
+          } else if ( action == 'nof' ) {
+            action = 'fo';
+            if( i == 0 ) {
+              millsToWait = 3000;
+            } else if (i == 1 ) {
+              // word is 'and'
+              millsToWait = 3000;
+            } else if ( i == 3) {
+              // word is 'turned'
+              millsToWait = 3000;
+            } else {
+              millsToWait = 3000;
+            }
+            setTimeout(displayNextTitle, millsToWait);
+          } else if ( action == 'fo' ) {
+            action = 'fi';
+            if( i < jobTitleArray.length-1 ) {
+              // no need to fade out if last iterations
+              fadeOut(jobTitleElem, iEnjoyElem);
+              i++;
+              setTimeout(displayNextTitle, 2100);
+            } else {
+              // iterations finished
+              displayLast();
+            }
+          }
+        }
+        displayNextTitle();
+      }
+    </script>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+
+    <style>
+      * { margin: 0; border: 0; padding: 0}
+
+      body {
+        background: #fafafa;
+      }
+
+      #container{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        min-width: 350px;
+        width: 100%;
+        max-width: 700px;
+        min-height: 400px;
+        max-height: 400px;
+
+        transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+
+        overflow: hidden;
+      }
+
+      h1 {
+        margin: auto;
+        padding-top: 7px;
+
+        text-align: center;
+
+        font-family: 'Roboto', Arial, Verdana, Helvetica, sans-serif;
+        font-size: 56pt;
+        line-height: 80%;
+        color: #050505;
+
+        animation: fadein 2s;
+        -o-animation: fadein 2s;
+        -ms-animation: fadein 2s;
+        -moz-animation: fadein 2s;
+        -webkit-animation: fadein 2s;
+      }
+
+      #js-links {
+        position: relative;
+        top: 20px;
+
+        min-width: 250px;
+        width: 60%;
+      }
+
+      #js-links ul {
+        margin-right: auto;
+        margin-left: auto;
+
+  		  list-style-type: none;
+
+  		  overflow: hidden;
+      }
+
+      #js-links ul li {
+		  float: right;
+		  margin-right: 25px;
+      height: 36px;
+      }
+
+      #js-links ul li a {
+        display: block;
+        text-align: right;
+		    color: #cfcfcf;
+
+        animation: fadein 4s;
+        -o-animation: fadein 4s;
+        -ms-animation: fadein 4s;
+        -moz-animation: fadein 4s;
+        -webkit-animation: fadein 4s;
+      }
+
+      #js-links ul li a:hover .fa-briefcase {
+        color: #8B4513;
+      }
+
+      #js-links ul li a:hover .fa-envelope {
+        color: #eee8aa;
+      }
+
+      .fa-briefcase, .fa-envelope {
+		    font-size: 35px;
+      }
+
+      #no-js-links {
+        position: relative;
+        top: 15px;
+
+        min-width: 250px;
+        width: 60%;
+      }
+
+      #no-js-links ul {
+        margin-right: auto;
+        margin-left: auto;
+
+        list-style-type: none;
+
+        overflow: hidden;
+      }
+
+      #no-js-links ul li {
+        margin-right: 25px;
+        height: 39px;
+      }
+
+      #no-js-links ul li a {
+        display: block;
+        text-align: right;
+        font-family: "Times New Roman", serif;
+        font-size: 35px;
+
+        color: #cfcfcf;
+
+        animation: fadein 4s;
+        -o-animation: fadein 4s;
+        -ms-animation: fadein 4s;
+        -moz-animation: fadein 4s;
+        -webkit-animation: fadein 4s;
+      }
+
+      #no-js-links ul li a:hover{
+        color: #24292e;
+      }
+
+      @keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+      }
+
+      /* Firefox < 16 */
+      @-moz-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+      }
+
+      /* Safari, Chrome and Opera > 12.1 */
+      @-webkit-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+      }
+
+      /* Internet Explorer */
+      @-ms-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+      }
+
+      /* Opera < 12.1 */
+      @-o-keyframes fadein {
+        from { opacity: 0; }
+        to   { opacity: 1; }
+      }
+
+      #skillset {
+        position: relative;
+        clear: both;
+        top: 32px;
+      }
+
+      h2 {
+        position: relative;
+        margin-left: 55%;
+        border-bottom: 1px solid #ff0000;
+
+        color: #050505;
+        font-family: 'Playfair Display', "Times New Roman", serif;
+
+        animation: fadein 4s;
+        -o-animation: fadein 4s;
+        -ms-animation: fadein 4s;
+        -moz-animation: fadein 4s;
+        -webkit-animation: fadein 4s;
+      }
+
+      h3 {
+        position: relative;
+        top: 5px;
+
+        color: #050505;
+        font-family: 'Playfair Display', "Times New Roman", serif;
+        text-align: center;
+
+        animation: fadein 8s;
+        -o-animation: fadein 8s;
+        -ms-animation: fadein 8s;
+        -moz-animation: fadein 8s;
+        -webkit-animation: fadein 8s;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="container">
+      <h1 id="name">Kevin Harper</h1>
+      <div id="js-links" style="display: none">
+        <ul>
+          <li><a href="mailto:kevin@kevinharper.com" title="E-mail Me"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+          <li><a href="{% url 'experience' %}" title="IT Experience"><i class="fa fa-briefcase" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+      <div id="no-js-links">
+        <ul>
+        <li><a href="{% url 'experience' %}" title="IT Experience">Experience</a></li>
+          <li><a href="mailto:kevin@kevinharper.com" title="E-mail Me">Contact Me</a></li>
+        </ul>
+        <script>
+          document.getElementById('js-links').style.display = 'block';
+          document.getElementById('no-js-links').style.display = 'none';
+        </script>
+      </div>
+      <div id="skillset">
+        <h2 id="job-title"><small>I'm a</small><br>Systems Administrator.</h2>
+        <h3 id="i-enjoy">10+ yrs experience w/ Linux & Win<br>servers, networking, & support</h3>
+        <script>
+          animateSkillset();
+        </script>
+      </div>
+    </div>
+  </body>
+</html>
+
