--- a/website/templates/pages/home.html
+++ b/website/templates/pages/home.html
@@ -49,8 +49,8 @@
         jobTitleElem.innerHTML = "";
         iEnjoyElem.innerHTML = "";
 
-        var jobTitleArray = ["<small>Hello &</small><br>welcome!", "<small>I'm a</small><br>Systems Administrator.", "<small>I</small><br>love to code.", "<small>I'm passionate</small><br>about open source."]
-        var iEnjoyArray = [" ", "10+ yrs experience w/ Linux & Win<br>servers, networking, & support", "Most recently, web-based apps<br>via Python, Django, & Docker", "Regular contributor to<br>open source projects on GitHub"]
+        var jobTitleArray = ["<small>Hello &</small><br>welcome!", "<small>I'm a</small><br>Systems Engineer.", "<small>I</small><br>love to code.", "<small>I embrace</small><br>open source."]
+        var iEnjoyArray = [" ", "15 yrs experience in IT: servers,<br>cloud, web dev, networks, support", "Most recently, web-based apps<br>Python/Django, Docker, & CircleCI", "Regular contributor to<br>open source projects on GitHub"]
         var i = 0;
         jobTitleElem.innerHTML = jobTitleArray[i];
         iEnjoyElem.innerHTML = iEnjoyArray[i];
@@ -319,8 +319,8 @@
         </script>
       </div>
       <div id="skillset">
-        <h2 id="job-title"><small>I'm a</small><br>Systems Administrator.</h2>
-        <h3 id="i-enjoy">10+ yrs experience w/ Linux & Win<br>servers, networking, & support</h3>
+        <h2 id="job-title"><small>I'm a</small><br>Systems Engineer</h2>
+        <h3 id="i-enjoy">15 yrs experience in IT: servers,<br>cloud, web dev, networks, support</h3>
         <script>
           animateSkillset();
         </script>
